<resources>
    <string name="app_name">Safe9 BFI</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="phone">Phone Number</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="add_patient">Add Patient</string>
    <string name="SELECTED_USER_ID" translatable="false">selected_user</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="delete_user">Delete Current User</string>
    <string name="delete_confirm_message">Are you sure you want to delete this patient?</string>
    <string name="user_will_be_deleted_permanently">User will be deleted permanently. Data cannot be recovered</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="SELECTED_USER_NAME" translatable="false">selected_user_name</string>
    <string name="conti">Continue</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="aadhaar">Aadhaar Number</string>
    <string name="sym1" translatable="false">1</string>
    <string name="sym2" translatable="false">2</string>
    <string name="sym3" translatable="false">3</string>
    <string name="sym4" translatable="false">4</string>
    <string name="sym5" translatable="false">5</string>
    <string name="sym6" translatable="false">6</string>
    <string name="sym7" translatable="false">7</string>
    <string name="sym8" translatable="false">8</string>
    <string name="in_progress">In Progress</string>
    <string name="create_a_patient">Create A Patient</string>
    <string name="select_a_patient">Select a Patient</string>
    <string name="no_patients_available">No Patients Available</string>
    <string name="please_create_patient">Please Create a Patient</string>
    <string name="ok">Ok</string>
    <string name="report">Report</string>
    <string name="general_checkup">General Checkup</string>
    <string name="sonography">Sonography</string>
    <string name="medical_tests">Medical Tests</string>
    <string name="hospital">Hospital</string>
    <string name="anganwadi">Anganwadi</string>
    <string name="registered_patients">Registered Patients</string>
    <string name="patient">Patient:</string>
    <string name="doctor">Doctor:</string>
    <string name="radiologist">Radiologist:</string>
    <string name="token">Token</string>
    <string name="btn_login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="weeks">Weeks</string>
    <string name="address">Address</string>
    <string name="name_of_doctor">Name of Doctor</string>
    <string name="weeks_of_pregnancy">Weeks of Pregnancy</string>
    <string name="vaccination">Vaccination</string>
    <string name="unique_sono_token">Unique Sonography Token</string>
    <string name="sono_slip">Sonography Slip</string>
    <string name="fetching_data_anganwadi">Fetching data of nearby patients</string>
    <string name="visit_patient">Visit Patient</string>
    <string name="medical_records">\u2022 General Checkup done on 10 Feb 2018 \n \u2022 Sonography done on 11 Feb 2018</string>
    <string name="add_child_birth">Add Child Birth</string>
    <string name="birthmark">Birthmark(if any)</string>
    <string name="vaginal_delivery">Vaginal Delivery</string>
    <string name="caesarian_section">Caesarian Section</string>
    <string name="vaginal_birth_after_caesarian">Birth after Caesarian</string>
    <string name="vacuum_extraction">Vacuum Extraction</string>
    <string name="forceps">Forceps</string>
    <string name="method">Method</string>
    <string name="submit">Submit</string>
    <string name="add_child_title">Add Child Details</string>
    <string name="weight_of_child">Weight of Child</string>
    <string name="get_vaccine">Get Vaccine</string>
    <string name="vaccination_due">\u2022 Vaccine due in 5 weeks</string>
</resources>
