<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_doctor"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_number_weeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weeks_of_pregnancy"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_aadhaar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aadhaar"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_user"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_patient" />

    </LinearLayout>
</ScrollView>
