<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:layout_weight="1"
                android:text="@string/gender"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender_entries"
                android:id="@+id/spinner_add_child_gender"/>

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_birthmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthmark"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/et_child_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_of_child"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:layout_weight="2"
                android:text="@string/method"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/method_entries"
                android:id="@+id/spinner_add_child_method"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_add_child_submit"
            android:text="@string/submit"/>
        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            android:id="@+id/pb_add_child_indicator"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
