<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_sono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                style="@style/Base.Widget.AppCompat.ActionBar.Solid"
                android:textSize="22sp"
                android:textColor="@color/colorAccent"
                android:id="@+id/tv_sono_slip_label"
                android:layout_centerHorizontal="true"
                android:text="@string/sono_slip"/>

            <TextView
                android:id="@+id/tv_sono_patient_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sono_slip_label"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/patient"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_sono_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/tv_sono_slip_label"
                android:layout_toEndOf="@+id/tv_sono_patient_label"
                android:textAppearance="@style/Base.Widget.AppCompat.ActionBar"
                android:textSize="22sp"
                tools:text="Patient" />

            <TextView
                android:id="@+id/tv_sono_doctor_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sono_patient_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/doctor"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_sono_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sono_patient_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/tv_sono_doctor_label"
                android:textAppearance="@style/Base.Widget.AppCompat.ActionBar"
                android:textSize="22sp"

                tools:text="Doctor" />

            <TextView
                android:id="@+id/tv_sono_radiologist_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sono_doctor_label"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/radiologist"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_sono_radiologist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sono_doctor_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/tv_sono_radiologist_label"
                android:textAppearance="@style/Base.Widget.AppCompat.ActionBar"
                android:textSize="22sp"
                tools:text="Radiologist" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_sono"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sono_token_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/unique_sono_token"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_sono_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sono_token_label"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:padding="16dp"
                android:textAppearance="@style/Base.Widget.AppCompat.ActionBar"
                android:textSize="22sp"
                tools:text="Tokenn" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
