<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_angan_patient_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_account_circle_black_24dp" />

        <TextView
            android:id="@+id/tv_angan_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/iv_angan_patient_image"
            android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_angan_patient_weeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_angan_patient_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/iv_angan_patient_image"
            android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_angan_patient_vaccine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_angan_patient_weeks"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/vaccination_due"
            android:layout_toEndOf="@+id/iv_angan_patient_image"
            android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_angan_patient_medical_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_angan_patient_vaccine"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/iv_angan_patient_image"
            android:text="@string/medical_records"
            android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_visit_patient"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_angan_patient_medical_label"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/visit_patient"
            android:textColor="@color/colorAccent"
            android:textSize="22sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
